--- a/css/selectUI.css
+++ b/css/selectUI.css
@@ -1,16 +1,15 @@
-.jComponentSelect {
+.selectUI {
   position: relative;
   width: 160px;
   height: 30px;
-  margin: 100px auto;
   line-height: 30px;
 }
 
-.jComponentSelect.zIndex100 {
+.selectUI.zIndex100 {
   z-index: 100;
 }
 
-.jComponentSelect .jComponentSelectTitleBox {
+.selectUI .jComponentSelectTitleBox {
   position: absolute;
   top: 0;
   left: 0;
@@ -23,7 +22,7 @@
   border-radius: 3px;
 }
 
-.jComponentSelect .jComponentSelectTitle {
+.selectUI .jComponentSelectTitle {
   height: 100%;
   overflow: hidden;
   white-space: nowrap;
@@ -31,18 +30,18 @@
   text-indent: 10px;
 }
 
-.jComponentSelect .jComponentSelectIcon {
+.selectUI .jComponentSelectIcon {
   float: right;
   width: 30px;
   height: 30px;
-  background: url("../images/jComponent/jComponent_select_icon.png") scroll no-repeat left top transparent;
+  background: url("../images/selectUI/selectUI_icon.png") scroll no-repeat left top transparent;
 }
 
-.jComponentSelect .jComponentSelectIconOpen {
+.selectUI .jComponentSelectIconOpen {
   background-position: 0 -30px;
 }
 
-.jComponentSelect .jComponentSelectList {
+.selectUI .jComponentSelectList {
   display: none;
   position: absolute;
   top: 0;
@@ -54,9 +53,10 @@
   border: 1px solid #ccc;
   box-sizing: border-box;
   background-color: #fff;
+	overflow-y:auto;
 }
 
-.jComponentSelect li {
+.selectUI li {
   float: left;
   width: 100%;
   height: 30px;
@@ -66,10 +66,10 @@
   box-sizing: border-box;
 }
 
-.jComponentSelect li:first-child {
+.selectUI li:first-child {
   border-top: none;
 }
 
-.jComponentSelect li:hover {
+.selectUI li:hover {
   background-color: #efefef;
 }
